edition = "2023";

package protobuf;

option features.field_presence = EXPLICIT;

message MovieRatingAvg {
    int32 id = 1;
    string title = 2;
    float average_rating = 3;
}

message MovieRatingAvgs {
    repeated MovieRatingAvg list = 1;
}